<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bc_myrequest">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/T_Request"
        android:text="@string/requestto"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/T_Date"
        android:text="@string/date"
        android:textColor="#000"
         android:layout_below="@+id/T_Request"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/T_Accept"
        android:text="@string/acceptedby"
        android:textColor="#000"
        android:layout_below="@+id/T_Date"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        />

</RelativeLayout>