<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/bc_login"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        />

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/logo_lgin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:id="@+id/logo_login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_login"
        android:textColor="#fff"
        android:text="@string/findyourneed"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"

        />

            <Button
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/logo"
                android:layout_alignStart="@+id/text_input_email_login"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/company"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@drawable/bc_btsignin"
                android:id="@+id/Btn_company"
                />
            <Button
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/logo"
                android:layout_alignEnd="@+id/text_input_email_login"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/shop"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@drawable/bc_btsignin"
                android:id="@+id/Btn_shop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#708cc4"
                android:textSize="@dimen/_12sdp"
                android:layout_below="@+id/logo"
                android:layout_marginStart="@dimen/_25sdp"
                android:id="@+id/email"
                android:layout_marginTop="@dimen/_45sdp"
                />
    <com.nawaqes.NoChangingBackgroundTextInputLayout
        android:id="@+id/text_input_email_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_49sdp"
        android:textColorHint="#193a7d"
        android:textColor="#193a7d"
        app:hintEnabled="false"
        android:layout_below="@+id/email"
        app:errorTextAppearance="@style/error_appearance"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bc_edittext"
            android:hint="@string/email"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:textColor="#193a7d"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="textEmailAddress"
            android:textColorHint="#193a7d"
            android:drawableEnd="@drawable/ic_email"
            android:paddingEnd="@dimen/_15sdp"
            android:id="@+id/E_Email"
            />
    </com.nawaqes.NoChangingBackgroundTextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#708cc4"
                android:textSize="@dimen/_12sdp"
                android:layout_below="@+id/text_input_email_login"
                android:layout_marginStart="@dimen/_25sdp"
                android:id="@+id/password"
                />


      <com.nawaqes.NoChangingBackgroundTextInputLayout
        android:id="@+id/text_input_password_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_49sdp"
        android:textColorHint="#193a7d"
        android:textColor="#193a7d"
        app:hintEnabled="false"
        android:layout_below="@+id/password"
        android:layout_marginRight="@dimen/_20sdp"
          app:errorTextAppearance="@style/error_appearance"
        android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_5sdp"
          app:passwordToggleEnabled="true"
          app:passwordToggleTint="#193a7d"
          app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bc_edittext"
            android:hint="@string/password"
            android:gravity="center_vertical"
            app:errorTextAppearance="@style/error_appearance"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="#193a7d"
            android:drawablePadding="@dimen/_10sdp"
            android:maxLength="16"
            android:textColorHint="#193a7d"
            android:id="@+id/E_Password"
            android:paddingEnd="@dimen/_15sdp"
            android:inputType="textPassword" />
    </com.nawaqes.NoChangingBackgroundTextInputLayout>


    <Button
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/text_input_password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:background="@drawable/bc_btsignin"
        android:id="@+id/Btn_login"
        />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_below="@+id/text_input_password_login"-->
<!--        android:layout_marginTop="@dimen/_10sdp"-->
<!--        android:text="@string/forgetyourpassword"-->
<!--        android:textColor="#4267b2"-->
<!--        android:id="@+id/T_forget"-->
<!--        android:paddingEnd="@dimen/_20sdp"-->
<!--        />-->



    <ImageView
        android:id="@+id/Btn_Face"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/bc_btsignin"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:textColor="#fff"
        android:textSize="@dimen/_9sdp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        android:layout_alignStart="@+id/Btn_login"
        android:src="@drawable/facebook"
        android:layout_below="@+id/Btn_login"
        />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/or"
              android:layout_centerHorizontal="true"
              android:textColor="#000"
              android:layout_marginTop="@dimen/_22sdp"
              android:layout_below="@+id/Btn_login"
              />

            <ImageView
                android:id="@+id/Btn_Google"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/btn_signgoogle"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp"
                android:textAllCaps="false"
                android:padding="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:src="@drawable/google"
                android:layout_below="@+id/Btn_login"
                android:layout_alignEnd="@+id/Btn_login"
                />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn_Face"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nohaveanaccount"
            android:textColor="#4267b2"
            android:id="@+id/noaccount"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="#FF0000"
            android:id="@+id/T_Signup"
            android:layout_toEndOf="@+id/noaccount"
            android:textSize="@dimen/_11sdp"
            />


    </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>