<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context=".Activities.Request_Details">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar"
        android:background="#2a4c93">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/logo_lgin"
                android:layout_centerInParent="true"
                android:id="@+id/logo_login"
                />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/myrequestinfo"
        android:textColor="#000"
        android:id="@+id/request"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/request"
        android:textColor="#cbcbcb"
        android:textStyle="bold"
        android:id="@+id/T_Request"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/request"
        android:textColor="#cbcbcb"
        android:textStyle="bold"
        android:id="@+id/T_Date"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T_Request"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/descrption"
        android:textColor="#000"
        android:id="@+id/descript"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descript"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/request"
        android:textColor="#cbcbcb"
        android:textStyle="bold"
        android:maxLines="3"
        android:id="@+id/T_Description"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T_Description"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/images"
        android:textColor="#000"
        android:id="@+id/imag"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_below="@+id/T_Description"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="8dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imag"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:text="@string/viwers"
        android:textColor="#000"
        android:id="@+id/T_Viwers"
        android:textStyle="bold"
        />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/SwipHome"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@+id/T_Viwers"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_Requests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:scrollbars="horizontal" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>